test/preprocessor/fail/bad_concat_operator.osl
#define CAT1(x, y) x##
#define CAT2(x, y) ##y
#define CAT3(x, y) ####
